# HomeEnergyHandling

./: .gitignore  README.md
Software/HomeEnergy/HomeEnergy_HighLevelApp/: ACS712.c  ACS712.h  CMakeLists.txt  CMakeSettings.json  Security.h  Sonoff.c  Sonoff.h  app_manifest.json  main.c  nvm.c  nvm.h  oled.c  oled.h  parson.c  sd1306.c  sd1306.h
Software/HomeEnergy/HomeEnergy_RTApp_MT3620_BareMetal/: CMakeLists.txt  CMakeSettings.json  app_manifest.json  main.c
